# bazel-tutorial

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-tutorial  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
projects/calculator/: calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/node_calculator/: BUILD.bazel  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/python_calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/python_web/: BUILD.bazel  main.py  python_web.py
